--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "scripts": {
         "dev": "parcel index.html",
-        "build": "parcel build index.html --public-url '.'",
+        "build": "parcel build index.html --public-url .",
         "deploy": "yarn build && gh-pages -d dist"
     },
     "devDependencies": {
