--- a/package.json
+++ b/package.json
@@ -5,26 +5,9 @@
     "main": "index.js",
     "author": "Tania Marokina",
     "license": "MIT",
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version",
-            "last 1 ie version"
-        ]
-    },
-    "targets": {
-        "chrome": "58",
-        "ie": "11"
-    },
     "scripts": {
         "build": "webpack --config webpack.config.js --mode production",
-        "dev": "webpack-dev-server --config webpack.config.js --mode development",
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --mode development --open",
         "dev-parcel": "parcel index.html",
         "build-parcel": "parcel build index.html --public-url .",
         "deploy-parcel": "yarn build-parcel && gh-pages -d dist"
@@ -35,11 +18,13 @@
         "autoprefixer": "^9.7.4",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^3.0.0",
+        "cross-env": "^7.0.0",
         "css-loader": "^3.4.2",
         "cssnano": "^4.1.10",
         "file-loader": "^5.0.2",
         "gh-pages": "^2.1.1",
         "html-loader": "^0.5.5",
+        "html-minifier": "^4.0.0",
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^6.0.0",
         "less": "^3.10.3",
@@ -48,7 +33,6 @@
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-loader": "^3.0.0",
         "style-loader": "^1.1.3",
-        "svg-url-loader": "^4.0.0",
         "terser-webpack-plugin": "^2.3.4",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
