--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "gh-pages": "^2.1.1",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^7.0.1",
+        "gulp-clean-css": "^4.2.0",
         "gulp-cli": "^2.2.0",
         "gulp-if": "^3.0.0",
         "gulp-imagemin": "^7.1.0",
